# ghcjs-test

./: .gitignore  CHANGELOG.md  LICENSE  cabal-browser.project  cabal.project  ghcjs-test.cabal  package.json  run_dev_server_minify.sh  run_dev_server_minify_browser.sh
app/: Main.hs
dev/: index.html
lib/: Print.js
