cabal-version:      3.4
name:               ghcjs-test
version:            0.1.0.0
license-file:       LICENSE
author:             Mateusz Goślinowski
maintainer:         mateusz.goslinowski@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable ghcjs-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2024
